--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.25.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "swiper": "^8.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
