--- a/packages/express-karakura/package.json
+++ b/packages/express-karakura/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "env-cmd -f ./config/dev.env nodemon ./app.js",
+    "start": "node ./app.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
