--- a/packages/react-karakura/package.json
+++ b/packages/react-karakura/package.json
@@ -10,11 +10,15 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flippy": "^1.1.0",
     "react-hook-form": "^7.25.3",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-stripe-checkout": "^2.6.3",
     "swiper": "^8.0.5",
     "web-vitals": "^2.1.4"
   },
